--- a/app/src/main/res/layout/activity_sms_page.xml
+++ b/app/src/main/res/layout/activity_sms_page.xml
@@ -7,11 +7,22 @@
     android:layout_height="match_parent"
     tools:context=".SmsPage">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="This is SMS page"
-        android:textAlignment="center"
-        android:textSize="20dp"/>
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:padding="16dp">
+
+      <Button
+          android:id="@+id/btn_google_sign_in"
+          android:layout_width="wrap_content"
+          android:background="#FF1515"
+          android:padding="20dp"
+          android:layout_height="wrap_content"
+          android:text="Sign in with Google"
+          android:layout_centerInParent="true" />
+
+
+   </RelativeLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
